# MoDaSci

./: .gitignore  Deploy-PyPi.sh  Deploy-TestPyPi.sh  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
TBI/: path.md
examples/: workflow.yaml  workflowA.yaml
modasci/: __init__.py  cli.py  data_connector.py  data_handler.py  enums.py  exceptions.py  micro_task.py  path.py  persistent.py  settings.py  storage.py  task.py  task_base.py  utils.py  volatile.py  workflow.py
modasci/contrib/micro_tasks/: example.py
modasci/contrib/tasks/: Bypass.py  example.py
modasci/micro_tasks/: alias.py  convert.py  distribute.py  drop.py  evaluate.py  key_by.py  rename.py  sample.py
modasci/persistents/: raw_path.py
modasci/persistents/hadoop/: hdfs.py
modasci/tasks/: bypass.py  bypassX.py  copy.py  hail_join.py  hail_qc.py  hail_union.py
modasci/volatiles/: __init__.py
modasci/volatiles/hail/: matrix_table.py  table.py
modasci/volatiles/hail/matrix_table/: hail.py  plink_bfile.py  vcf.py
modasci/volatiles/hail/table/: hail.py  parquet.py  sql.py  text.py
modasci/volatiles/pandas/: data_frame.py  parquet.py  sql.py  text.py
rodasci/: VERSION  dataconnector.py  datahandler.py  dataset.py  job.py  logger.py  microoperation.py  microp.py  operation.py  path.py  pathdict.py  pathlist.py  permanent.py  temp.py  test copy.yaml  test.yaml  util.py  volatile.py  workflow.py
