[metadata]
name = modasci
version = attr: modasci.__version__
description = MoDaSci
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = data science
author_email = arashlab@github.com
author = Arash Bayat
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Framework :: Bokeh
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    dacite
    Munch
    PyYAML
    requests
    stringcase
